--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.0",
     "typescript": "^5.1.6"
   }
 }
