--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "Node backend for PNG Insects web application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon dist/server.js",
+    "start": "node dist/server.js",
+    "build": "tsc"
   },
   "author": "Tim Kent",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
+    "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   }
 }
