--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
