--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "cloudinary": "^1.40.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
+  },
+  "_moduleAliases": {
+    "@configs": "dist/configs/index",
+    "@controllers": "dist/controllers",
+    "@models": "dist/models",
+    "@routes": "dist/routes",
+    "@utils": "dist/utils"
   }
 }
