--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon dist/server.js",
     "start": "node dist/server.js",
-    "build": "tsc"
+    "build": "npm install && tsc"
   },
   "author": "Tim Kent",
   "license": "ISC",
